src/objects/ACCL__Call_Job__c.object
<CustomObject>
    <description>Contains answered questions and product surveys (jobs).</description>
    <fields>
        <fullName>ACCL__Call__c</fullName>
        <label>Call</label>
        <referenceTo>ACCL__Call__c</referenceTo>
        <relationshipLabel>Call Jobs</relationshipLabel>
        <relationshipName>Call_Jobs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ACCL__Data_Type_Option__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Data Type Option</label>
        <referenceTo>ACCL__Data_Type_Option__c</referenceTo>
        <relationshipLabel>Call Jobs</relationshipLabel>
        <relationshipName>Call_Jobs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ACCL__Display_Value__c</fullName>
        <formula>IF(ISPICKVAL(ACCL__Job_Definition_Template__r.ACCL__Data_Type__r.ACCL__Data_Type__c, &quot;Toggle&quot;) ,   ACCL__Data_Type_Option__r.ACCL__Description__c   ,  ACCL__Value__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Answer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Done__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Done</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACCL__Job_Definition_Template_Description__c</fullName>
        <formula>ACCL__Job_Definition_Template__r.ACCL__Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Question</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Job_Definition_Template__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Job Definition Template</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>((1 AND 2) OR (3 AND 4))</booleanFilter>
            <filterItems>
                <field>$Source.ACCL__Product__c</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>ACCL__Job_Definition_Template__c.ACCL__Job_Template__r.ACCL__Product_Reference__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <filterItems>
                <field>$Source.ACCL__Product__c</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>ACCL__Job_Definition_Template__c.ACCL__Job_Template__r.ACCL__Product_Reference__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ACCL__Job_Definition_Template__c</referenceTo>
        <relationshipLabel>Call Jobs</relationshipLabel>
        <relationshipName>Call_Jobs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ACCL__Job_Definition__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Job Definition</label>
        <referenceTo>ACCL__Job_DL_Job_Definition_Template__c</referenceTo>
        <relationshipLabel>Call Jobs</relationshipLabel>
        <relationshipName>Call_Jobs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ACCL__Job_List__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Job List</label>
        <referenceTo>ACCL__Job_List__c</referenceTo>
        <relationshipLabel>Call Jobs</relationshipLabel>
        <relationshipName>Call_Jobs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ACCL__Job_Template_Description__c</fullName>
        <formula>ACCL__Job_Definition_Template__r.ACCL__Job_Template__r.ACCL__Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Job Template Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Last_Value__c</fullName>
        <label>Last Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Manually__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Manually</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACCL__Number_of_Pictures__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Number of Pictures</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ACCL__POS__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Reference to POS.</description>
        <label>POS</label>
        <referenceTo>ACCL__POS__c</referenceTo>
        <relationshipLabel>Call Jobs</relationshipLabel>
        <relationshipName>Call_Jobs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ACCL__Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>ACCL__Product__c</referenceTo>
        <relationshipLabel>Call Jobs</relationshipLabel>
        <relationshipName>Call_Jobs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ACCL__Promotion__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Promotion</label>
        <referenceTo>ACCL__Promotion__c</referenceTo>
        <relationshipLabel>Call Jobs</relationshipLabel>
        <relationshipName>Call_Jobs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ACCL__Target_Value__c</fullName>
        <description>Only for Mobility, stores Target Values to Job</description>
        <label>Target Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Value__c</fullName>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Visit_Date__c</fullName>
        <label>Visit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>REX_Account__c</fullName>
        <formula>ACCL__Call__r.ACCL__Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>REX_Account</label>
        <type>Text</type>
    </fields>
    <label>Call Job</label>
    <listViews>
        <fullName>ACCL__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CJ-{0000}</displayFormat>
        <label>Call Job Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Call Jobs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>